--- a/index.html
+++ b/index.html
@@ -2,36 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Order summary card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Order Summary
-
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main>
+    <article class="order-summary-article">
+      <picture>
+        <img src="./images/pattern-background-mobile.svg" alt="Girl dancing while listening to music">
+      </picture>
+      <h1 class="title">Order Summary</h1>
+      <p class="description">
+        You can now listen to millions of songs, audiobooks,
+        and podcasts on any device anywhere you like!
+      </p>
+      <div class="plan-section">
+        <img src="./images/icon-music.svg" alt="Music Icon">
+        <div class="plan-wrapper">
+          <h2 class="plan-title">Annual Plan</h2>
+          <p class="description">$59.99/year</p>
+        </div>
+        <a href="#" class="change-link">Change</a>
+      </div>
+      <button class="btn">Proceed to Payment</button>
+      <a href="#" class="cancel-link">Cancel Order</a>
+    </article>
+  </main>
 </body>
 </html>
