--- a/index.html
+++ b/index.html
@@ -1,33 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | Order summary card</title>
-</head>
-<body>
-  <main>
-    <article class="order-summary-article">
-      <picture>
-        <img src="./images/pattern-background-mobile.svg" alt="Girl dancing while listening to music">
-      </picture>
-      <h1 class="title">Order Summary</h1>
-      <p class="description">
-        You can now listen to millions of songs, audiobooks,
-        and podcasts on any device anywhere you like!
-      </p>
-      <div class="plan-section">
-        <img src="./images/icon-music.svg" alt="Music Icon">
-        <div class="plan-wrapper">
-          <h2 class="plan-title">Annual Plan</h2>
-          <p class="description">$59.99/year</p>
-        </div>
-        <a href="#" class="change-link">Change</a>
-      </div>
-      <button class="btn">Proceed to Payment</button>
-      <a href="#" class="cancel-link">Cancel Order</a>
-    </article>
-  </main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Frontend Mentor | Order summary card</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaqueries.css">
+  </head>
+  <body>
+    <main>
+      <article class="order-summary-article">
+        <picture>
+          <img
+            src="./images/illustration-hero.svg"
+            alt="Girl dancing while listening to music"
+          />
+        </picture>
+        <section class="order-summary-section">
+          <h1 class="title">Order Summary</h1>
+          <p class="description">
+            You can now listen to millions of songs, audiobooks, and podcasts on
+            any device anywhere you like!
+          </p>
+          <div class="plan-section">
+            <img src="./images/icon-music.svg" alt="Music Icon" />
+            <div class="plan-wrapper">
+              <h2 class="title plan-title">Annual Plan</h2>
+              <p class="description">$59.99/year</p>
+            </div>
+            <a href="#" class="change-link">Change</a>
+          </div>
+          <button class="btn">Proceed to Payment</button>
+          <a href="#" class="cancel-link">Cancel Order</a>
+        </section>
+      </article>
+    </main>
+  </body>
 </html>
